# OCBS

./: .gitignore  CLAWHUB_PUBLISHING.md  DEV_WORKFLOW.md  MERGE_PLAN.md  NATIVE_INTEGRATION.md  P2_TASKS.md  PROJECT_NOTES.md  README.md  SKILL.md  TASK.md  install_skill.py  package.json  pyproject.toml
.github/workflows/: npm-publish.yml
docs/: setup.md
skill/: skill.json
skills/: SKILL.md
src/ocbs/: __init__.py  cli.py  config.py  core.py  integration.py  notifications.py  serve.py  serve_cli.py  skill.py
tests/: test_core.py  test_integration.py  test_integration_full.py  test_serve.py
