[build-system]
requires = ["setuptools>=61.0", "wheel", "clawhub>=0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocbs"
version = "0.1.0"
description = "OpenClaw Backup System - Incremental backup with skill and CLI interface"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "xxhash>=3.0.0",
]

[project.optional-dependencies]
clawhub = "clawhub>=0.1.0"

[project.scripts]
ocbs = "ocbs.cli:main"

[project.urls]
Homepage = "https://github.com/KHAEntertainment/OCBS"
Documentation = "https://github.com/KHAEntertainment/OCBS#readme"
Repository = "https://github.com/KHAEntertainment/OCBS"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
